created file directories to segreggate code. created forms for sub menus linked sub menus to db and retrieving info from db for author tables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-#frmAddBook label.error, #frmEditBook label.error{
+#frmAddBook label.error, #frmEditBook label.error, #frmAddAuthor label.error{
   color:red;
 }
 
